Add User Agent config option (#99)
Add config operation to override user agent when talking to S3

We need to be able to send a custom user agent string to the S3 APIs as
part of our commercial product (Elastio) which uses `ssstar` internally.
There's an open issue to add this functionality to the AWS SDK for Rust
(awslabs/aws-sdk-rust#146), but it's very old and clearly has not been
implemented.

Through trial and error, and guided by the implementation in another
open source code base (awslabs/amazon-qldb-shell#196) I was able to
cobble something together that works.  It's not pretty, and it involves
mostly duplicating the internal implementation of the
`Client::with_confg` function from the S3 SDK, however it will have to
do for now until official support is added to the SDK.

Part of (but doesn't yet close) #94

--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssstar"
-version = "0.4.2-dev"
+version = "0.4.3-dev"
 edition = "2021"
 authors = ["Adam Nelson <adam@elastio.com>"]
 description = """
@@ -35,7 +35,10 @@ async-trait = "0.1.64"
 aws-config = "0.54.1"
 aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
 aws-sdk-s3 = { version = "0.24.0", features = ["rt-tokio"] }
+aws-smithy-client = "0.54.4"
 aws-smithy-http = "0.54.4"
+aws-smithy-http-tower = "0.54.4"
+aws-smithy-types = "0.54.4"
 aws-smithy-types-convert = { version = "0.54.3", features = ["convert-chrono"] }
 aws-types = { version = "0.54.1", features = [] }
 byte-unit = { version = "4" }
@@ -53,11 +56,12 @@ tar = "0.4.38"
 tokio = { version = "1.25.0", features = ["full"] }
 tokio-stream = "0.1.12"
 tokio-util = { version = "0.7.7", features = ["io", "io-util"] }
+tower = "0.4.13"
 tracing = "0.1.36"
 url = "2.3.0"
 
 [dev-dependencies]
-ssstar-testing = { version = "0.4.2-dev", path = "../ssstar-testing" }
+ssstar-testing = { version = "0.4.3-dev", path = "../ssstar-testing" }
 color-eyre = "0.6.2"
 rand = "0.8.5"
 strum = { version = "0.24.1", features = ["derive"] }
