--- a/deny.toml
+++ b/deny.toml
@@ -18,13 +18,13 @@
 # dependencies not shared by any other crates, would be ignored, as the target
 # list here is effectively saying which targets you are building for.
 targets = [
-    # The triple can be any string, but only the target triples built in to
-    # rustc (as of 1.40) can be checked against actual config expressions
-    #{ triple = "x86_64-unknown-linux-musl" },
-    # You can also specify which target_features you promise are enabled for a
-    # particular target. target_features are currently not validated against
-    # the actual valid features supported by the target architecture.
-    #{ triple = "wasm32-unknown-unknown", features = ["atomics"] },
+  # The triple can be any string, but only the target triples built in to
+  # rustc (as of 1.40) can be checked against actual config expressions
+  #{ triple = "x86_64-unknown-linux-musl" },
+  # You can also specify which target_features you promise are enabled for a
+  # particular target. target_features are currently not validated against
+  # the actual valid features supported by the target architecture.
+  #{ triple = "wasm32-unknown-unknown", features = ["atomics"] },
 ]
 
 # This section is considered when running `cargo deny check advisories`
@@ -48,28 +48,28 @@ notice = "warn"
 # A list of advisory IDs to ignore. Note that ignored advisories will still
 # output a note when they are encountered.
 ignore = [
-    #"RUSTSEC-0000-0000",
+  #"RUSTSEC-0000-0000",
 
-    # tempdir works fine and is only used in test code.  No immediate urgency to update to tempfile
-    "RUSTSEC-2018-0017",
+  # tempdir works fine and is only used in test code.  No immediate urgency to update to tempfile
+  "RUSTSEC-2018-0017",
 
-    # We only use dotenv in tests, not in production, so this advisory doesn't apply
-    "RUSTSEC-2021-0142",
+  # We only use dotenv in tests, not in production, so this advisory doesn't apply
+  "RUSTSEC-2021-0142",
 
-    # This is a dependency of the AWS SDK crates, we can't control it
-    "RUSTSEC-2022-0049",
+  # This is a dependency of the AWS SDK crates, we can't control it
+  "RUSTSEC-2022-0049",
 
-    # We should probably update to dotenvy, but we use dotenv only in test code so there's
-    # no immediate urgency
-    "RUSTSEC-2021-0141",
+  # We should probably update to dotenvy, but we use dotenv only in test code so there's
+  # no immediate urgency
+  "RUSTSEC-2021-0141",
 
-    # Unfortunately ansi-term isn't a direct dependency, it comes via tracing-subscriber, so
-    # hopefully that team updates to a maintained crate in the futures
-    "RUSTSEC-2021-0139",
+  # Unfortunately ansi-term isn't a direct dependency, it comes via tracing-subscriber, so
+  # hopefully that team updates to a maintained crate in the futures
+  "RUSTSEC-2021-0139",
 
-    # This `time` UB seems to be a gross over-reaction.  Anyway this is a transitive dependency via chrono,
-    # we are not able to update directly
-    "RUSTSEC-2020-0071",
+  # This `time` UB seems to be a gross over-reaction.  Anyway this is a transitive dependency via chrono,
+  # we are not able to update directly
+  "RUSTSEC-2020-0071",
 ]
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
@@ -97,21 +97,21 @@ unlicensed = "deny"
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 allow = [
-    "MIT",
-    "Apache-2.0",
-    "Apache-2.0 WITH LLVM-exception",
-    "CC0-1.0",
-    "0BSD",
-    "BSD-3-Clause",
-    "ISC",
-    "OpenSSL",
-    "Unicode-DFS-2016"
+  "MIT",
+  "Apache-2.0",
+  "Apache-2.0 WITH LLVM-exception",
+  "CC0-1.0",
+  "0BSD",
+  "BSD-3-Clause",
+  "ISC",
+  "OpenSSL",
+  "Unicode-DFS-2016",
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 deny = [
-    #"Nokia",
+  #"Nokia",
 ]
 # Lint level for licenses considered copyleft
 copyleft = "warn"
@@ -135,9 +135,9 @@ confidence-threshold = 0.8
 # Allow 1 or more licenses on a per-crate basis, so that particular licenses
 # aren't accepted for every possible crate as with the normal allow list
 exceptions = [
-    # Each entry is the crate and version constraint, and its specific allow
-    # list
-    #{ allow = ["Zlib"], name = "adler32", version = "*" },
+  # Each entry is the crate and version constraint, and its specific allow
+  # list
+  #{ allow = ["Zlib"], name = "adler32", version = "*" },
 ]
 
 # Some crates don't have (easily) machine readable licensing information,
@@ -156,9 +156,9 @@ expression = "MIT AND ISC AND OpenSSL"
 # and the crate will be checked normally, which may produce warnings or errors
 # depending on the rest of your configuration
 license-files = [
-    # Each entry is a crate relative path, and the (opaque) hash of its contents
-    #{ path = "LICENSE", hash = 0xbd0eed23 }
-    { path = "LICENSE", hash = 0xbd0eed23 }
+  # Each entry is a crate relative path, and the (opaque) hash of its contents
+  #{ path = "LICENSE", hash = 0xbd0eed23 }
+  { path = "LICENSE", hash = 0xbd0eed23 },
 ]
 
 [licenses.private]
@@ -171,7 +171,7 @@ ignore = false
 # is only published to private registries, and ignore is true, the crate will
 # not have its license(s) checked
 registries = [
-    #"https://sekretz.com/registry
+  #"https://sekretz.com/registry
 ]
 
 # This section is considered when running `cargo deny check bans`.
@@ -190,50 +190,50 @@ wildcards = "allow"
 highlight = "all"
 # List of crates that are allowed. Use with care!
 allow = [
-    #{ name = "ansi_term", version = "=0.11.0" },
+  #{ name = "ansi_term", version = "=0.11.0" },
 ]
 # List of crates to deny
 deny = [
-    # Each entry the name of a crate and a version range. If version is
-    # not specified, all versions will be matched.
-    #{ name = "ansi_term", version = "=0.11.0" },
-    #
-    # Wrapper crates can optionally be specified to allow the crate when it
-    # is a direct dependency of the otherwise banned crate
-    #{ name = "ansi_term", version = "=0.11.0", wrappers = [] },
+  # Each entry the name of a crate and a version range. If version is
+  # not specified, all versions will be matched.
+  #{ name = "ansi_term", version = "=0.11.0" },
+  #
+  # Wrapper crates can optionally be specified to allow the crate when it
+  # is a direct dependency of the otherwise banned crate
+  #{ name = "ansi_term", version = "=0.11.0", wrappers = [] },
 ]
 # Certain crates/versions that will be skipped when doing duplicate detection.
 skip = [
-    #{ name = "ansi_term", version = "=0.11.0" },
+  #{ name = "ansi_term", version = "=0.11.0" },
 
-    # aws SDK crate aws-smithy-types-convert still uses chrono 0.4 which uses time 0.1
-    { name = "time", version = "0.1.*" },
+  # aws SDK crate aws-smithy-types-convert still uses chrono 0.4 which uses time 0.1
+  { name = "time", version = "0.1.*" },
 
-    # AWS SDK's rustls dependency chain still uses an old base64 crate
-    { name = "base64", version = "0.13.*" },
+  # AWS SDK's rustls dependency chain still uses an old base64 crate
+  { name = "base64", version = "0.13.*" },
 ]
 # Similarly to `skip` allows you to skip certain crates during duplicate
 # detection. Unlike skip, it also includes the entire tree of transitive
 # dependencies starting at the specified crate, up to a certain depth, which is
 # by default infinite
 skip-tree = [
-    #{ name = "ansi_term", version = "=0.11.0", depth = 20 },
+  #{ name = "ansi_term", version = "=0.11.0", depth = 20 },
 
-    # Old wasi crates are pulled in by time 0.1 and getrandom 0.1
-    { name = "wasi", version = "0.9.*", depth = 20 },
-    { name = "wasi", version = "0.10.*", depth = 20 },
+  # Old wasi crates are pulled in by time 0.1 and getrandom 0.1
+  { name = "wasi", version = "0.9.*", depth = 20 },
+  { name = "wasi", version = "0.10.*", depth = 20 },
 
-    # rand 0.4 used by tempdir
-    { name = "rand", version = "0.4.*", depth = 20 },
-    # rand 0.7 used by again
-    { name = "rand", version = "0.7.*", depth = 20 },
+  # rand 0.4 used by tempdir
+  { name = "rand", version = "0.4.*", depth = 20 },
+  # rand 0.7 used by again
+  { name = "rand", version = "0.7.*", depth = 20 },
 
-    # old parking-lot still used as transitive dep of `again`
-    { name = "parking_lot", version = "0.11.*", depth = 20 },
+  # old parking-lot still used as transitive dep of `again`
+  { name = "parking_lot", version = "0.11.*", depth = 20 },
 
-    # an older windows-sys pulls in a ton of older duplicate crates.  This is a transitive dep
-    # of hyper-rustls brough in by the latest AWS SDK crates
-    { name = "windows-sys", version = "0.36.*", depth = 20 },
+  # an older windows-sys pulls in a ton of older duplicate crates.  This is a transitive dep
+  # of hyper-rustls brough in by the latest AWS SDK crates
+  { name = "windows-sys", version = "0.36.*", depth = 20 },
 ]
 
 # This section is considered when running `cargo deny check sources`.
