--- a/ssstar-testing/Cargo.toml
+++ b/ssstar-testing/Cargo.toml
@@ -1,19 +1,20 @@
 [package]
-name = "ssstar-testing"
-version = "0.4.4-dev"
-edition = "2021"
-authors = ["Adam Nelson <adam@elastio.com>"]
+authors = { workspace = true }
+categories = { workspace = true }
 description = """
 Library of testing helpers to make it easier to write test fixtures.
 
 Not for use outside of ssstar crate.  Breaking changes may ocurr without warning.
 """
-documentation = "https://github.com/elastio/ssstar"
-homepage = "https://github.com/elastio/ssstar"
-repository = "https://github.com/elastio/ssstar"
-keywords = ["tar", "s3", "archive"]
-categories = ["command-line-utilities", "filesystem"]
-license = "Apache-2.0 OR MIT"
+documentation = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+keywords = { workspace = true }
+license = { workspace = true }
+name = "ssstar-testing"
+readme = { workspace = true }
+repository = { workspace = true }
+version = { workspace = true }
 
 [badges]
 maintenance = { status = "experimental" }
@@ -23,34 +24,34 @@ maintenance = { status = "experimental" }
 shared-version = true
 
 [dependencies]
-again = "0.1.2"
-aws-config = "0.54.1"
-aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
-aws-sdk-s3 = { version = "0.24.0", features = ["rt-tokio"] }
-aws-types = { version = "0.54.1", features = [] }
-base64 = "0.21.0"
-byte-unit = "4.0.14"
-bytes = "1.4.0"
-color-eyre = "0.6.2"
-digest = "0.10.3"
-dirs = "4.0.0"
-duct = "0.13.5"
-futures = "0.3.26"
-http = "0.2.9"
-once_cell = "1.17.1"
-rand = "0.8.5"
-regex = "1.7.1"
-sha2 = "0.10.6"
-strum = { version = "0.24.1", features = ["derive"] }
-tar = "0.4.38"
-tempdir = "0.3.7"
-tokio = { version = "1.25.0", features = ["full"] }
-tokio-util = { version = "0.7.7", features = ["io", "io-util"] }
-tracing = "0.1.36"
-tracing-appender = "0.2.2"
-tracing-subscriber = "0.3.15"
-tracing-test = "0.2.4"
-typenum = "1.15.0"
-url = "2.3.0"
-walkdir = "2.3.2"
-which = "4.4.0"
+again                = { workspace = true }
+aws-config           = { workspace = true }
+aws-credential-types = { workspace = true }
+aws-sdk-s3           = { workspace = true }
+aws-types            = { workspace = true }
+base64               = { workspace = true }
+byte-unit            = { workspace = true }
+bytes                = { workspace = true }
+color-eyre           = { workspace = true }
+digest               = { workspace = true }
+dirs                 = { workspace = true }
+duct                 = { workspace = true }
+futures              = { workspace = true }
+http                 = { workspace = true }
+once_cell            = { workspace = true }
+rand                 = { workspace = true }
+regex                = { workspace = true }
+sha2                 = { workspace = true }
+strum                = { workspace = true }
+tar                  = { workspace = true }
+tempdir              = { workspace = true }
+tokio                = { workspace = true }
+tokio-util           = { workspace = true }
+tracing              = { workspace = true }
+tracing-appender     = { workspace = true }
+tracing-subscriber   = { workspace = true }
+tracing-test         = { workspace = true }
+typenum              = { workspace = true }
+url                  = { workspace = true }
+walkdir              = { workspace = true }
+which                = { workspace = true }
