--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ more-asserts             = "0.3.1"
 once_cell                = "1"
 rand                     = "0.8"
 regex                    = "1.7.1"
+serde_json               = "1"
 sha2                     = "0.10.6"
 snafu                    = { version = "0.7", features = ["futures"] }
 strum                    = { version = "0.24", features = ["derive"] }
