--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -51,6 +51,7 @@ glob                     = { workspace = true }
 http                     = { workspace = true }
 itertools                = { workspace = true }
 once_cell                = { workspace = true }
+serde_json               = { workspace = true }
 snafu                    = { workspace = true }
 tar                      = { workspace = true }
 tokio                    = { workspace = true }
