--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ sha2                     = "0.10.6"
 snafu                    = { version = "0.7", features = ["futures"] }
 strum                    = { version = "0.24", features = ["derive"] }
 tar                      = "0.4"
-tempdir                  = "0.3"
+tempfile                 = "3"
 tokio                    = { version = "1", features = ["full"] }
 tokio-stream             = "0.1"
 tokio-util               = { version = "0.7", features = ["io", "io-util"] }
