--- a/ssstar-testing/Cargo.toml
+++ b/ssstar-testing/Cargo.toml
@@ -44,7 +44,7 @@ regex                = { workspace = true }
 sha2                 = { workspace = true }
 strum                = { workspace = true }
 tar                  = { workspace = true }
-tempdir              = { workspace = true }
+tempfile             = { workspace = true }
 tokio                = { workspace = true }
 tokio-util           = { workspace = true }
 tracing              = { workspace = true }
