Add object timestamp to progress callback

--- a/ssstar-cli/Cargo.toml
+++ b/ssstar-cli/Cargo.toml
@@ -28,6 +28,7 @@ path  = "src/main.rs"
 
 [dependencies]
 byte-unit          = { workspace = true }
+chrono             = { workspace = true }
 clap               = { workspace = true }
 color-eyre         = { workspace = true }
 futures            = { workspace = true }
