Initial concept for enhanced ssstar API (#116)
* Update deps and reorganize

Update to the latest AWS SDK releases, dealing with the usual breakage
as a result.

Re-arrange dependencies and other workspace properties to avoid
duplication by using workspace-level properties.

Format TOML files with taplo consistent with the other Elastio projects.

Update to Rust toolchain 1.69

* Add new `storage` module and initial API design.

This new storage abstraction isn't implemented yet and isn't actually
part of the create or extract logic.  It's just the initial outline.

* Refactor a bit and make the tar builder report where the data goes

This is still a WIP but I was able to get code working reliably (and
with a test) that calculates where in the tar stream the data for each
object is stored.  That will be important in Elastio later when we need
to construct an index.

* Fix warnings and clippy lints

* Add byte offset to `tar_archive_object_written` progress reporter method

* Remove `tar_` prefix from progress methods.

Now that we have a new storage abstraction coming, the archive might not
actually be tar format so keeping the `tar_` prefix would lead to
confusion.

* Fix warnings and lints

* Uncomment some temporarily disabled test code

* Fix windows build

* Fix rustfmt (fuck!)

* Add object timestamp to progress callback

* Fix windows build harder

* Disable coverage since it's always broken

* Update `release.toml` for latest version of `cargo-release`

--- a/ssstar-cli/Cargo.toml
+++ b/ssstar-cli/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
-name = "ssstar-cli"
-version = "0.4.3-dev"
-edition = "2021"
-authors = ["Adam Nelson <adam@elastio.com>"]
+authors = { workspace = true }
+categories = { workspace = true }
 description = """
 Tar-like archive utility that creates and restores tar-compatible archives to and from S3 or S3-compatible storage.  ssstar is specifically designed to stream both input and output data so memory usage is minimal, while aggressive concurrency is used to maximize network throughput.
 """
-documentation = "https://github.com/elastio/ssstar"
-homepage = "https://github.com/elastio/ssstar"
-repository = "https://github.com/elastio/ssstar"
-keywords = ["tar", "s3", "archive"]
-categories = ["command-line-utilities", "filesystem"]
-license = "Apache-2.0 OR MIT"
-readme = "../README.md"
+documentation = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+keywords = { workspace = true }
+license = { workspace = true }
+name = "ssstar-cli"
+readme = { workspace = true }
+repository = { workspace = true }
+version = { workspace = true }
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -23,20 +23,21 @@ shared-version = true
 
 [[bin]]
 bench = false
-path = "src/main.rs"
-name = "ssstar"
+name  = "ssstar"
+path  = "src/main.rs"
 
 [dependencies]
-ssstar = {version = "0.4.3-dev", path = "../ssstar", features = ["clap"] }
-clap = { version = "4.1.6", features = ["derive","wrap_help"] }
-url = "2.3.0"
-byte-unit = "4.0.14"
-tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "local-time"] }
-tracing = "0.1.36"
-tokio = { version = "1.25.0", features = ["full"] }
-color-eyre = "0.6.2"
-futures = "0.3.26"
-indicatif = "0.17.3"
+byte-unit          = { workspace = true }
+chrono             = { workspace = true }
+clap               = { workspace = true }
+color-eyre         = { workspace = true }
+futures            = { workspace = true }
+indicatif          = { workspace = true }
+ssstar             = { version = "0.4.4-dev", path = "../ssstar", features = ["clap"] }
+tokio              = { workspace = true }
+tracing            = { workspace = true }
+tracing-subscriber = { workspace = true }
+url                = { workspace = true }
 
 [build-dependencies]
-vergen = "7.5.1"
+vergen = { workspace = true }
