--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -1,8 +1,6 @@
 [package]
-name = "ssstar"
-version = "0.4.3-dev"
-edition = "2021"
-authors = ["Adam Nelson <adam@elastio.com>"]
+authors = { workspace = true }
+categories = { workspace = true }
 description = """
 Library crate that creates and restores archives to and from S3 or S3-compatible storage.
 ssstar is specifically designed to stream both input and output data so memory usage is minimal, while
@@ -10,13 +8,15 @@ aggressive concurrency is used to maximize network throughput.
 
 If you're looking for the command line (CLI), see `ssstar-cli`
 """
-documentation = "https://github.com/elastio/ssstar"
-homepage = "https://github.com/elastio/ssstar"
-repository = "https://github.com/elastio/ssstar"
-keywords = ["tar", "s3", "archive"]
-categories = ["command-line-utilities", "filesystem"]
-license = "Apache-2.0 OR MIT"
-readme = "../README.md"
+documentation = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+keywords = { workspace = true }
+license = { workspace = true }
+name = "ssstar"
+readme = { workspace = true }
+repository = { workspace = true }
+version = { workspace = true }
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -26,50 +26,55 @@ maintenance = { status = "actively-developed" }
 # This obvviously requires taking a dependency on `clap` so it should only be enabled in a CLI that is using clap
 clap = ["dep:clap"]
 
+# Enable the (still experimental) new storage API to allow callers to define
+# their own archive formats to store objects read from object storage
+storage = []
+
 [package.metadata.release]
 # All crates share the same version and should be incremented together
 shared-version = true
 
 [dependencies]
-async-trait = "0.1.64"
-aws-config = "0.54.1"
-aws-credential-types = { version = "0.54.1", features = ["hardcoded-credentials"] }
-aws-sdk-s3 = { version = "0.24.0", features = ["rt-tokio"] }
-aws-smithy-client = "0.54.4"
-aws-smithy-http = "0.54.4"
-aws-smithy-http-tower = "0.54.4"
-aws-smithy-types = "0.54.4"
-aws-smithy-types-convert = { version = "0.54.3", features = ["convert-chrono"] }
-aws-types = { version = "0.54.1", features = [] }
-byte-unit = { version = "4" }
-bytes = "1.4.0"
-chrono = "0.4.22"
-clap = { version = "4.1.6", features = ["derive"], optional = true }
-dyn-clone = "1.0.9"
-futures = "0.3.26"
-glob = "0.3.0"
-http = "0.2.9"
-itertools = "0.10.5"
-once_cell = "1.17.1"
-snafu = { version = "0.7.1", features = ["futures"] }
-tar = "0.4.38"
-tokio = { version = "1.25.0", features = ["full"] }
-tokio-stream = "0.1.12"
-tokio-util = { version = "0.7.7", features = ["io", "io-util"] }
-tower = "0.4.13"
-tracing = "0.1.36"
-url = "2.3.0"
+async-trait              = { workspace = true }
+aws-config               = { workspace = true }
+aws-credential-types     = { workspace = true }
+aws-sdk-s3               = { workspace = true }
+aws-smithy-client        = { workspace = true }
+aws-smithy-http          = { workspace = true }
+aws-smithy-http-tower    = { workspace = true }
+aws-smithy-types         = { workspace = true }
+aws-smithy-types-convert = { workspace = true }
+aws-types                = { workspace = true }
+byte-unit                = { workspace = true }
+bytes                    = { workspace = true }
+chrono                   = { workspace = true }
+clap                     = { workspace = true, optional = true }
+dyn-clone                = { workspace = true }
+futures                  = { workspace = true }
+glob                     = { workspace = true }
+http                     = { workspace = true }
+itertools                = { workspace = true }
+once_cell                = { workspace = true }
+serde_json               = { workspace = true }
+snafu                    = { workspace = true }
+tar                      = { workspace = true }
+tokio                    = { workspace = true }
+tokio-stream             = { workspace = true }
+tokio-util               = { workspace = true }
+tower                    = { workspace = true }
+tracing                  = { workspace = true }
+url                      = { workspace = true }
 
 [dev-dependencies]
-ssstar-testing = { version = "0.4.3-dev", path = "../ssstar-testing" }
-color-eyre = "0.6.2"
-rand = "0.8.5"
-strum = { version = "0.24.1", features = ["derive"] }
-assert_matches = "1.5.0"
-more-asserts = "0.3.1"
-tempdir = "0.3.7"
-dotenv = "0.15.0"
-dotenv_codegen = "0.15.0"
+assert_matches = { workspace = true }
+color-eyre     = { workspace = true }
+dotenv         = { workspace = true }
+dotenv_codegen = { workspace = true }
+more-asserts   = { workspace = true }
+rand           = { workspace = true }
+ssstar-testing = { version = "0.4.4-dev", path = "../ssstar-testing" }
+strum          = { workspace = true }
+tempfile       = { workspace = true }
 
 [build-dependencies]
-vergen = "7.5.1"
+vergen = { workspace = true }
