--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords      = ["tar", "s3", "archive"]
 license       = "Apache-2.0 OR MIT"
 readme        = "README.md"
 repository    = "https://github.com/elastio/ssstar"
-version       = "0.4.4-dev"
+version       = "0.5.0"
 
 [workspace.dependencies]
 again                    = "0.1.2"
