--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -72,7 +72,7 @@ dotenv         = { workspace = true }
 dotenv_codegen = { workspace = true }
 more-asserts   = { workspace = true }
 rand           = { workspace = true }
-ssstar-testing = { version = "0.4.4-dev", path = "../ssstar-testing" }
+ssstar-testing = { version = "0.5.0", path = "../ssstar-testing" }
 strum          = { workspace = true }
 tempfile       = { workspace = true }
 
