Add new `role_credentials_provider` module that implements auto refreshing credentials
  This provider assumes the role and gets the temporary credentials and refreshes the credentials when they are close
  to expiration.

--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -44,6 +44,7 @@ aws-smithy-http          = { workspace = true }
 aws-smithy-http-tower    = { workspace = true }
 aws-smithy-types         = { workspace = true }
 aws-smithy-types-convert = { workspace = true }
+aws-sdk-sts              = { workspace = true }
 aws-types                = { workspace = true }
 byte-unit                = { workspace = true }
 bytes                    = { workspace = true }
