--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -26,10 +26,6 @@ maintenance = { status = "actively-developed" }
 # This obvviously requires taking a dependency on `clap` so it should only be enabled in a CLI that is using clap
 clap = ["dep:clap"]
 
-# Enable the (still experimental) new storage API to allow callers to define
-# their own archive formats to store objects read from object storage
-storage = []
-
 [package.metadata.release]
 # All crates share the same version and should be incremented together
 shared-version = true
@@ -49,12 +45,14 @@ byte-unit                = { workspace = true }
 bytes                    = { workspace = true }
 chrono                   = { workspace = true }
 clap                     = { workspace = true, optional = true }
+derive_builder           = { workspace = true }
 dyn-clone                = { workspace = true }
 futures                  = { workspace = true }
 glob                     = { workspace = true }
 http                     = { workspace = true }
 itertools                = { workspace = true }
 once_cell                = { workspace = true }
+serde                    = { workspace = true }
 serde_json               = { workspace = true }
 snafu                    = { workspace = true }
 tar                      = { workspace = true }
