--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ bytes                    = "1.4.0"
 chrono                   = "0.4.22"
 clap                     = { version = "4", features = ["derive"] }
 color-eyre               = "0.6.2"
+derive_builder           = "0.12.0"
 digest                   = "0.10.3"
 dirs                     = "4.0.0"
 dotenv                   = "0.15.0"
@@ -47,6 +48,7 @@ more-asserts             = "0.3.1"
 once_cell                = "1"
 rand                     = "0.8"
 regex                    = "1.7.1"
+serde                    = { version = "1", features = ["derive"] }
 serde_json               = "1"
 sha2                     = "0.10.6"
 snafu                    = { version = "0.7", features = ["futures"] }
