--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ aws-config               = "0.55"
 aws-credential-types     = { version = "0.55", features = ["hardcoded-credentials"] }
 aws-sdk-s3               = { version = "0.27.0", features = ["rt-tokio"] }
 aws-sdk-sts              = { version = "0.27.0" }
+aws-sdk-ssm              = { version = "0.27.0" }
 aws-smithy-client        = "0.55"
 aws-smithy-http          = "0.55"
 aws-smithy-http-tower    = "0.55"
