--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -45,6 +45,7 @@ aws-smithy-http-tower    = { workspace = true }
 aws-smithy-types         = { workspace = true }
 aws-smithy-types-convert = { workspace = true }
 aws-sdk-sts              = { workspace = true }
+aws-sdk-ssm              = { workspace = true }
 aws-types                = { workspace = true }
 byte-unit                = { workspace = true }
 bytes                    = { workspace = true }
