--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -56,7 +56,7 @@ glob                     = { workspace = true }
 http                     = { workspace = true }
 itertools                = { workspace = true }
 once_cell                = { workspace = true }
-serde_json               = { workspace = true }
+serde_json               = { workspace = true, optional = true }
 snafu                    = { workspace = true }
 tar                      = { workspace = true }
 tokio                    = { workspace = true }
