--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,17 @@ version       = "0.6.0"
 again                    = "0.1.2"
 assert_matches           = "1.5.0"
 async-trait              = "0.1"
-aws-config               = "0.55"
-aws-credential-types     = { version = "0.55", features = ["hardcoded-credentials"] }
-aws-sdk-s3               = { version = "0.27.0", features = ["rt-tokio"] }
-aws-sdk-sts              = { version = "0.27.0" }
-aws-smithy-client        = "0.55"
-aws-smithy-http          = "0.55"
-aws-smithy-http-tower    = "0.55"
-aws-smithy-types         = "0.55"
-aws-smithy-types-convert = { version = "0.55", features = ["convert-chrono"] }
-aws-types                = { version = "0.55", features = [] }
+aws-config               = "0.56"
+aws-credential-types     = { version = "0.56", features = ["hardcoded-credentials"] }
+aws-sdk-s3               = { version = "0.29.0", features = ["rt-tokio"] }
+aws-sdk-sts              = { version = "0.29.0" }
+aws-smithy-client        = "0.56"
+aws-smithy-http          = "0.56"
+aws-smithy-http-tower    = "0.56"
+aws-smithy-runtime-api   = "0.56"
+aws-smithy-types         = "0.56"
+aws-smithy-types-convert = { version = "0.56", features = ["convert-chrono"] }
+aws-types                = { version = "0.56", features = [] }
 base64                   = "0.21.0"
 byte-unit                = { version = "4" }
 bytes                    = "1.4.0"
