--- a/deny.toml
+++ b/deny.toml
@@ -210,6 +210,12 @@ skip = [
 
   # tokio still has a transitive dep on this older version
   { name = "hermit-abi", version = "0.2" },
+
+  # Used by tempfile v3.5.0 that is not fresh. The reason
+  # we keep it current is that if we update `tempfile`, and then
+  # `clap` we still will have an issue, but now with 2 more crates:
+  # linux-raw-sys 0.3.8 and rustix 0.37.19 that the freshest of clap uses
+  { name = "fastrand", version = "1.9.0" },
 ]
 # Similarly to `skip` allows you to skip certain crates during duplicate
 # detection. Unlike skip, it also includes the entire tree of transitive
