--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -42,6 +42,7 @@ aws-sdk-s3               = { workspace = true }
 aws-smithy-client        = { workspace = true }
 aws-smithy-http          = { workspace = true }
 aws-smithy-http-tower    = { workspace = true }
+aws-smithy-runtime-api   = { workspace = true }
 aws-smithy-types         = { workspace = true }
 aws-smithy-types-convert = { workspace = true }
 aws-sdk-sts              = { workspace = true }
