--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,17 +17,18 @@ version       = "0.7.1"
 again                    = "0.1.2"
 assert_matches           = "1.5.0"
 async-trait              = "0.1"
-aws-config               = "0.56"
-aws-credential-types     = { version = "0.56", features = ["hardcoded-credentials"] }
-aws-sdk-s3               = { version = "0.29.0", features = ["rt-tokio"] }
-aws-sdk-sts              = { version = "0.29.0" }
-aws-smithy-client        = "0.56"
-aws-smithy-http          = "0.56"
-aws-smithy-http-tower    = "0.56"
-aws-smithy-runtime-api   = "0.56"
-aws-smithy-types         = "0.56"
-aws-smithy-types-convert = { version = "0.56", features = ["convert-chrono"] }
-aws-types                = { version = "0.56", features = [] }
+aws-config               = { version = "1.1.1", features = ["behavior-version-latest"] }
+aws-credential-types     = { version = "1.1.0", features = ["hardcoded-credentials"] }
+aws-sdk-s3               = { version = "1.10.0", features = ["rt-tokio"] }
+aws-sdk-sts              = { version = "1.9.0" }
+aws-smithy-async         = "1.1.1"
+aws-smithy-client        = "0.60"
+aws-smithy-http          = "0.60"
+aws-smithy-http-tower    = "0.60"
+aws-smithy-runtime-api   = "1.1.1"
+aws-smithy-types         = "1.1.1"
+aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
+aws-types                = { version = "1.1.1", features = [] }
 base64                   = "0.21.0"
 byte-unit                = { version = "4" }
 bytes                    = "1.4.0"
