--- a/ssstar/Cargo.toml
+++ b/ssstar/Cargo.toml
@@ -39,13 +39,14 @@ async-trait              = { workspace = true }
 aws-config               = { workspace = true }
 aws-credential-types     = { workspace = true }
 aws-sdk-s3               = { workspace = true }
+aws-sdk-sts              = { workspace = true }
+aws-smithy-async         = { workspace = true }
 aws-smithy-client        = { workspace = true }
 aws-smithy-http          = { workspace = true }
 aws-smithy-http-tower    = { workspace = true }
 aws-smithy-runtime-api   = { workspace = true }
 aws-smithy-types         = { workspace = true }
 aws-smithy-types-convert = { workspace = true }
-aws-sdk-sts              = { workspace = true }
 aws-types                = { workspace = true }
 byte-unit                = { workspace = true }
 bytes                    = { workspace = true }
