--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "2"
 members = ["ssstar", "ssstar-cli", "ssstar-testing"]
 
 [workspace.package]
@@ -66,6 +67,6 @@ tracing-subscriber       = { version = "0.3", features = ["env-filter", "fmt", "
 tracing-test             = "0.2.4"
 typenum                  = "1.15.0"
 url                      = "2.3"
-vergen                   = "7"
+vergen                   = { version = "8.0", features = ["cargo"]}
 walkdir                  = "2"
 which                    = "4"
