--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -4,10 +4,9 @@ on:
   workflow_dispatch:
   push:
     tags:
-      - '[v]?[0-9]+.[0-9]+.[0-9]+'
+      - "[v]?[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-
   publish-binaries:
     name: Publishing for ${{ matrix.job.os }}
     runs-on: ${{ matrix.job.os }}
@@ -45,10 +44,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@1.71.0
         with:
-          profile: minimal
-          target: ${{ matrix.job.target }}
+          targets: ${{ matrix.job.target }}
       - uses: Swatinem/rust-cache@v1
       - name: Install Ubuntu MUSL deps
         run: |
@@ -61,7 +59,7 @@ jobs:
           use-cross: ${{ matrix.job.use-cross }}
           args: --release --target ${{ matrix.job.target }} --package ssstar-cli
         env:
-          RUSTFLAGS: '-C target-feature=+crt-static'
+          RUSTFLAGS: "-C target-feature=+crt-static"
 
       - name: install strip command
         shell: bash
@@ -109,7 +107,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: startsWith(github.ref, 'refs/tags/v')
-
 
   publish-docker:
     runs-on: ubuntu-latest
