chore: Dependabot fixes and tidying up (#131)
I noticed that the Dependabot config is out of date and isn't working
right with the old format `rust-toolchain`.

I also took this opportunity to fix a broken link to releases in the
README

This configured dependabot to always add me as a reviewer. It also
switches from a weekly to a daily schedule.

I then got pulled into a yak-shaving exercise, ultimately updating several deps, updating to Rust 1.81, migrating to the `dtolnay/rust-toolchain` action, and updating `deny.toml` with some new licenses and some suppression of dupes.

--- a/.github/workflows/publish-crates.yml
+++ b/.github/workflows/publish-crates.yml
@@ -3,7 +3,7 @@ name: Publish crates to crates.io
 on:
   push:
     tags:
-      - '[v]?[0-9]+.[0-9]+.[0-9]+'
+      - "[v]?[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
   publish-cargo:
@@ -17,10 +17,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          override: true
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@1.81.0
       - uses: Swatinem/rust-cache@v1
       - name: Publish ssstar-testing
         uses: actions-rs/cargo@v1
