--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,54 +13,52 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-    - uses: actions/checkout@v4
-    - uses: EmbarkStudios/cargo-deny-action@v1
-      with:
-        arguments: --all-features
-        command: check advisories
+      - uses: actions/checkout@v4
+      - uses: EmbarkStudios/cargo-deny-action@v1
+        with:
+          arguments: --all-features
+          command: check advisories
 
   # Do all possible static checks here
   cargo-checks:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Install Rust toolchain
-      uses: actions-rs/toolchain@v1
-      with:
-        # The latest version of nightly leads to failre on CI check:
-        # error[E0635]: unknown feature `proc_macro_span_shrink`
-        #   --> /home/runner/.cargo/registry/src/index.crates.io-6f17d22bba15001f/proc-macro2-1.0.58/src/lib.rs:92:30
-        #    |
-        # 92 |     feature(proc_macro_span, proc_macro_span_shrink)
-        #    |                              ^^^^^^^^^^^^^^^^^^^^^^
-        #
-        # to prevent this we pinned the specific version of nightly with doesn't have this bug, you can unpin the version
-        # if you check that this works
-        #
-        # More details see here: https://github.com/dtolnay/proc-macro2/issues/356#issuecomment-1614449061
-        # and here https://github.com/dtolnay/proc-macro2/issues/356#issuecomment-1614467505
-        #
-        toolchain: nightly-2023-06-15
-        profile: minimal
-        override: true
-    - uses: Swatinem/rust-cache@v2
-    - uses: EmbarkStudios/cargo-deny-action@v1
-      with:
-        arguments: --all-features
-        command: check bans licenses sources
-    - name: Install cargo-udeps
-      shell: bash
-      run: |
-        wget  \
-          --output-file cargo-udeps.tar.gz \
-          --tries=10 --retry-connrefused \
-          https://github.com/est31/cargo-udeps/releases/download/v0.1.35/cargo-udeps-v0.1.35-x86_64-unknown-linux-gnu.tar.gz
-        tar xvzf  cargo-udeps-v0.1.35-x86_64-unknown-linux-gnu.tar.gz --strip-components=2
-        mv cargo-udeps $HOME/.cargo/bin/
-    - name: Check for unused dependencies
-      shell: bash
-      run: |
-        cargo +nightly-2023-06-15 udeps
+      - uses: actions/checkout@v4
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          # The latest version of nightly leads to failre on CI check:
+          # error[E0635]: unknown feature `proc_macro_span_shrink`
+          #   --> /home/runner/.cargo/registry/src/index.crates.io-6f17d22bba15001f/proc-macro2-1.0.58/src/lib.rs:92:30
+          #    |
+          # 92 |     feature(proc_macro_span, proc_macro_span_shrink)
+          #    |                              ^^^^^^^^^^^^^^^^^^^^^^
+          #
+          # to prevent this we pinned the specific version of nightly with doesn't have this bug, you can unpin the version
+          # if you check that this works
+          #
+          # More details see here: https://github.com/dtolnay/proc-macro2/issues/356#issuecomment-1614449061
+          # and here https://github.com/dtolnay/proc-macro2/issues/356#issuecomment-1614467505
+          #
+          toolchain: nightly-2023-06-15
+      - uses: Swatinem/rust-cache@v2
+      - uses: EmbarkStudios/cargo-deny-action@v1
+        with:
+          arguments: --all-features
+          command: check bans licenses sources
+      - name: Install cargo-udeps
+        shell: bash
+        run: |
+          wget  \
+            --output-file cargo-udeps.tar.gz \
+            --tries=10 --retry-connrefused \
+            https://github.com/est31/cargo-udeps/releases/download/v0.1.35/cargo-udeps-v0.1.35-x86_64-unknown-linux-gnu.tar.gz
+          tar xvzf  cargo-udeps-v0.1.35-x86_64-unknown-linux-gnu.tar.gz --strip-components=2
+          mv cargo-udeps $HOME/.cargo/bin/
+      - name: Check for unused dependencies
+        shell: bash
+        run: |
+          cargo +nightly-2023-06-15 udeps
 
   rustfmt:
     runs-on: ubuntu-latest
@@ -68,10 +66,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@1.81.0
         with:
-          profile: minimal
-          override: true
           components: rustfmt
       - uses: Swatinem/rust-cache@v2
       - name: Check formatting
@@ -87,10 +83,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@1.81.0
         with:
-          profile: minimal
-          override: true
           components: clippy
       - uses: Swatinem/rust-cache@v2
       - name: Clippy check
@@ -116,10 +110,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          override: true
+        uses: dtolnay/rust-toolchain@1.81.0
       - uses: Swatinem/rust-cache@v2
       - name: Cache the minio binary
         id: cache-minio
@@ -184,10 +175,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@1.81.0
         with:
-          profile: minimal
-          target: x86_64-unknown-linux-musl
+          targets: x86_64-unknown-linux-musl
       - name: Install MUSL deps
         run: |
           sudo apt-get install musl musl-dev musl-tools
@@ -198,7 +188,7 @@ jobs:
           command: build
           args: --release --target x86_64-unknown-linux-musl --package ssstar-cli
         env:
-          RUSTFLAGS: '-C target-feature=+crt-static'
+          RUSTFLAGS: "-C target-feature=+crt-static"
       - name: Test static binary
         run: |
           target/x86_64-unknown-linux-musl/release/ssstar --version
@@ -210,11 +200,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
+        uses: dtolnay/rust-toolchain@1.81.0
       - uses: Swatinem/rust-cache@v2
       - name: Check documentation
         env:
@@ -223,4 +209,3 @@ jobs:
         with:
           command: doc
           args: --no-deps --document-private-items --all-features --workspace --examples
-
