--- a/deny.toml
+++ b/deny.toml
@@ -56,10 +56,6 @@ ignore = [
   # We should probably update to dotenvy, but we use dotenv only in test code so there's
   # no immediate urgency
   "RUSTSEC-2021-0141",
-
-  # This `time` UB seems to be a gross over-reaction.  Anyway this is a transitive dependency via chrono,
-  # we are not able to update directly
-  "RUSTSEC-2020-0071",
 ]
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
@@ -96,6 +92,8 @@ allow = [
   "ISC",
   "OpenSSL",
   "Unicode-DFS-2016",
+  "Unicode-3.0",
+  "Zlib",
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
@@ -251,6 +249,22 @@ skip-tree = [
   { name = "windows-sys", version = "0.42.*", depth = 20 },
   { name = "windows-sys", version = "0.45.*", depth = 20 },
   { name = "windows", version = "0.48.*", depth = 20 },
+
+  # mio
+  { name = "windows-sys", version = "0.52.*", depth = 20 },
+
+  # matchers (dep of tracing-subscriber)
+  { name = "regex-automata", version = "0.1.*", depth = 20 },
+
+  # multiple AWS crates
+  { name = "http-body", version = "0.4.*", depth = 20 },
+
+  # multiple AWS crates
+  { name = "http-body", version = "0.4.*", depth = 20 },
+  { name = "http", version = "0.2.*", depth = 20 },
+
+  # snafu
+  { name = "heck", version = "0.4.*", depth = 20 },
 ]
 
 # This section is considered when running `cargo deny check sources`.
