Explicitly opt in to resolver v 3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = ["ssstar", "ssstar-cli", "ssstar-testing"]
+resolver = "3"
 
 [workspace.package]
 authors       = ["Adam Nelson <adam@elastio.com>"]
