--- a/deny.toml
+++ b/deny.toml
@@ -1,136 +1,71 @@
-# This template contains all of the possible sections and their default values
+[graph]
+all-features = true
 
-# Note that all fields that take a lint level have these possible values:
-# * deny - An error will be produced and the check will fail
-# * warn - A warning will be produced, but the check will not fail
-# * allow - No warning or error will be produced, though in some cases a note
-# will be
-
-# The values provided in this template are the default values that will be used
-# when any section or field is not specified in your own configuration
-
-# If 1 or more target triples (and optionally, target_features) are specified,
-# only the specified targets will be checked when running `cargo deny check`.
-# This means, if a particular package is only ever used as a target specific
-# dependency, such as, for example, the `nix` crate only being used via the
-# `target_family = "unix"` configuration, that only having windows targets in
-# this list would mean the nix crate, as well as any of its exclusive
-# dependencies not shared by any other crates, would be ignored, as the target
-# list here is effectively saying which targets you are building for.
-targets = [
-  # The triple can be any string, but only the target triples built in to
-  # rustc (as of 1.40) can be checked against actual config expressions
-  #{ triple = "x86_64-unknown-linux-musl" },
-  # You can also specify which target_features you promise are enabled for a
-  # particular target. target_features are currently not validated against
-  # the actual valid features supported by the target architecture.
-  #{ triple = "wasm32-unknown-unknown", features = ["atomics"] },
-]
-
-# This section is considered when running `cargo deny check advisories`
-# More documentation for the advisories section can be found here:
-# https://embarkstudios.github.io/cargo-deny/checks/advisories/cfg.html
 [advisories]
-# The path where the advisory database is cloned/fetched into
-db-path = "~/.cargo/advisory-db"
-# The url(s) of the advisory databases to use
-db-urls = ["https://github.com/rustsec/advisory-db"]
-# The lint level for security vulnerabilities
-vulnerability = "deny"
-# The lint level for unmaintained crates
-unmaintained = "warn"
-# The lint level for crates that have been yanked from their source registry
-yanked = "warn"
-# The lint level for crates with security notices. Note that as of
-# 2019-12-17 there are no security notice advisories in
-# https://github.com/rustsec/advisory-db
-notice = "warn"
-# A list of advisory IDs to ignore. Note that ignored advisories will still
-# output a note when they are encountered.
 ignore = [
-  #"RUSTSEC-0000-0000",
-
-  # We only use dotenv in tests, not in production, so this advisory doesn't apply
+  # dotenv is unmaintained, but there's no obvious alternative
+  "RUSTSEC-2021-0141",
   "RUSTSEC-2021-0142",
 
-  # We should probably update to dotenvy, but we use dotenv only in test code so there's
-  # no immediate urgency
-  "RUSTSEC-2021-0141",
+  # instant is unmaintained; TODO investigate alternatives
+  "RUSTSEC-2024-0384",
 ]
-# Threshold for security vulnerabilities, any vulnerability with a CVSS score
-# lower than the range specified will be ignored. Note that ignored advisories
-# will still output a note when they are encountered.
-# * None - CVSS Score 0.0
-# * Low - CVSS Score 0.1 - 3.9
-# * Medium - CVSS Score 4.0 - 6.9
-# * High - CVSS Score 7.0 - 8.9
-# * Critical - CVSS Score 9.0 - 10.0
-#severity-threshold =
+version = 2
 
-# If this is true, then cargo deny will use the git executable to fetch advisory database.
-# If this is false, then it uses a built-in git library.
-# Setting this to true can be helpful if you have special authentication requirements that cargo-deny does not support.
-# See Git Authentication for more information about setting up git authentication.
-#git-fetch-with-cli = true
+[bans]
+deny = [
+  # { crate = "git2", use-instead = "gix" },
+]
+multiple-versions = "deny"
+skip = [
+  { crate = "regex-syntax@0.6", reason = "tracing-subscriber is still using the older regex crate.  everything else has adopted the new version" },
 
-# This section is considered when running `cargo deny check licenses`
-# More documentation for the licenses section can be found here:
-# https://embarkstudios.github.io/cargo-deny/checks/licenses/cfg.html
+  { crate = "crypto-bigint@0.4.9", reason = "one of the dependencies of `aws-sigv4 v 1.1.1` crate depends on this outdated version of crate" },
+]
+skip-tree = [
+  { crate = "wasi@0.11.*", depth = 20, reason = "Old wasi crates are pulled in by getrandom, among others" },
+  { crate = "getrandom@0.2", depth = 20, reason = "Transitive dep of older AWS SDK crates" },
+
+  { crate = "rand@0.7.*", depth = 20, reason = "rand 0.7 used by again" },
+  { crate = "rand_core@0.6.*", depth = 20, reason = "transitive dep of older AWS SDK crates" },
+
+  { crate = "parking_lot@0.11.*", depth = 20, reason = "old parking-lot still used as transitive dep of `again`" },
+
+  { crate = "windows-sys@0.52.*", depth = 20, reason = "mio" },
+
+  { crate = "regex-automata@0.1.*", depth = 20, reason = "matchers (dep of tracing-subscriber)" },
+
+  { crate = "http-body@0.4.*", depth = 20, reason = "multiple AWS crates" },
+
+  { crate = "http-body@0.4.*", depth = 20, reason = "multiple AWS crates" },
+  { crate = "http@0.2.*", depth = 20, reason = "multiple AWS crates" },
+
+  { crate = "heck@0.4.*", depth = 20, reason = "snafu" },
+]
+wildcards = 'deny'
+
+[sources]
+unknown-git      = "deny"
+unknown-registry = "deny"
+
 [licenses]
-# The lint level for crates which do not have a detectable license
-unlicensed = "deny"
-# List of explicitly allowed licenses
-# See https://spdx.org/licenses/ for list of possible licenses
-# [possible values: any SPDX 3.11 short identifier (+ optional exception)].
 allow = [
   "MIT",
   "Apache-2.0",
   "Apache-2.0 WITH LLVM-exception",
-  "CC0-1.0",
   "0BSD",
   "BSD-3-Clause",
   "ISC",
   "OpenSSL",
-  "Unicode-DFS-2016",
   "Unicode-3.0",
   "Zlib",
 ]
-# List of explicitly disallowed licenses
-# See https://spdx.org/licenses/ for list of possible licenses
-# [possible values: any SPDX 3.11 short identifier (+ optional exception)].
-deny = [
-  #"Nokia",
-]
-# Lint level for licenses considered copyleft
-copyleft = "warn"
-# Blanket approval or denial for OSI-approved or FSF Free/Libre licenses
-# * both - The license will be approved if it is both OSI-approved *AND* FSF
-# * either - The license will be approved if it is either OSI-approved *OR* FSF
-# * osi-only - The license will be approved if is OSI-approved *AND NOT* FSF
-# * fsf-only - The license will be approved if is FSF *AND NOT* OSI-approved
-# * neither - This predicate is ignored and the default lint level is used
-allow-osi-fsf-free = "neither"
-# Lint level used when no other predicates are matched
-# 1. License isn't in the allow or deny lists
-# 2. License isn't copyleft
-# 3. License isn't OSI/FSF, or allow-osi-fsf-free = "neither"
-default = "deny"
-# The confidence threshold for detecting a license from license text.
-# The higher the value, the more closely the license text must be to the
-# canonical license text of a valid SPDX license file.
-# [possible values: any between 0.0 and 1.0].
-confidence-threshold = 0.8
-# Allow 1 or more licenses on a per-crate basis, so that particular licenses
-# aren't accepted for every possible crate as with the normal allow list
+confidence-threshold = 0.80
 exceptions = [
-  # Each entry is the crate and version constraint, and its specific allow
-  # list
-  #{ allow = ["Zlib"], name = "adler32", version = "*" },
+  # Use exceptions for these as they only have a single user
+  # { allow = ["Zlib"], crate = "tinyvec" },
 ]
 
-# Some crates don't have (easily) machine readable licensing information,
-# adding a clarification entry for it allows you to manually specify the
-# licensing information
 [[licenses.clarify]]
 # The name of the crate the clarification applies to
 name = "ring"
@@ -148,145 +83,3 @@ license-files = [
   #{ path = "LICENSE", hash = 0xbd0eed23 }
   { path = "LICENSE", hash = 0xbd0eed23 },
 ]
-
-[licenses.private]
-# If true, ignores workspace crates that aren't published, or are only
-# published to private registries.
-# To see how to mark a crate as unpublished (to the official registry),
-# visit https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish-field.
-ignore = false
-# One or more private registries that you might publish crates to, if a crate
-# is only published to private registries, and ignore is true, the crate will
-# not have its license(s) checked
-registries = [
-  #"https://sekretz.com/registry
-]
-
-# This section is considered when running `cargo deny check bans`.
-# More documentation about the 'bans' section can be found here:
-# https://embarkstudios.github.io/cargo-deny/checks/bans/cfg.html
-[bans]
-# Lint level for when multiple versions of the same crate are detected
-multiple-versions = "deny"
-# Lint level for when a crate version requirement is `*`
-wildcards = "allow"
-# The graph highlighting used when creating dotgraphs for crates
-# with multiple versions
-# * lowest-version - The path to the lowest versioned duplicate is highlighted
-# * simplest-path - The path to the version with the fewest edges is highlighted
-# * all - Both lowest-version and simplest-path are used
-highlight = "all"
-# List of crates that are allowed. Use with care!
-allow = [
-  #{ name = "ansi_term", version = "=0.11.0" },
-]
-# List of crates to deny
-deny = [
-  # Each entry the name of a crate and a version range. If version is
-  # not specified, all versions will be matched.
-  #{ name = "ansi_term", version = "=0.11.0" },
-  #
-  # Wrapper crates can optionally be specified to allow the crate when it
-  # is a direct dependency of the otherwise banned crate
-  #{ name = "ansi_term", version = "=0.11.0", wrappers = [] },
-]
-# Certain crates/versions that will be skipped when doing duplicate detection.
-skip = [
-  #{ name = "ansi_term", version = "=0.11.0" },
-
-  # aws SDK crate aws-smithy-types-convert still uses chrono 0.4 which uses time 0.1
-  { name = "time", version = "0.1.*" },
-
-  # syn 1.x will be with us for a LONG time via several transitive deps
-  { name = "syn", version = "1" },
-
-  # tracing-subscriber is still using the older regex crate.  everything else has adopted the new version
-  { name = "regex-syntax", version = "0.6" },
-
-  # indicatif hasn't updated to the new portable-atomic
-  { name = "portable-atomic", version = "0.3" },
-
-  # tokio still has a transitive dep on this older version
-  { name = "hermit-abi", version = "0.2" },
-
-  # Used by tempfile v3.5.0 that is not fresh. The reason
-  # we keep it current is that if we update `tempfile`, and then
-  # `clap` we still will have an issue, but now with 2 more crates:
-  # linux-raw-sys 0.3.8 and rustix 0.37.19 that the freshest of clap uses
-  { name = "fastrand", version = "1.9.0" },
-
-  # one of the dependencies of `aws-sigv4 v 1.1.1` crate depends on this outdated version of crate
-  { name = "crypto-bigint", version = "=0.4.9" },
-
-  # one of the dependencies of `aws-smithy-runtime v.1.1.1` crate depends on this outdated version of crates
-  { name = "ring", version = "=0.16.20" },
-  { name = "untrusted", version = "=0.7.1" },
-
-  # ring v0.16.20 depend on this outdated version of crate
-  { name = "spin", version = "=0.5.2" },
-]
-# Similarly to `skip` allows you to skip certain crates during duplicate
-# detection. Unlike skip, it also includes the entire tree of transitive
-# dependencies starting at the specified crate, up to a certain depth, which is
-# by default infinite
-skip-tree = [
-  #{ name = "ansi_term", version = "=0.11.0", depth = 20 },
-
-  # Old wasi crates are pulled in by time 0.1 and getrandom 0.1
-  { name = "wasi", version = "0.9.*", depth = 20 },
-  { name = "wasi", version = "0.10.*", depth = 20 },
-
-  # rand 0.7 used by again
-  { name = "rand", version = "0.7.*", depth = 20 },
-
-  # old parking-lot still used as transitive dep of `again`
-  { name = "parking_lot", version = "0.11.*", depth = 20 },
-
-  # an older windows-sys pulls in a ton of older duplicate crates.  This is a transitive dep
-  # of hyper-rustls brough in by the latest AWS SDK crates
-  #
-  # These various versions of windows-related crates get pulled in by various transitive deps of AWS SDK
-  { name = "windows-sys", version = "0.42.*", depth = 20 },
-  { name = "windows-sys", version = "0.45.*", depth = 20 },
-  { name = "windows", version = "0.48.*", depth = 20 },
-
-  # mio
-  { name = "windows-sys", version = "0.52.*", depth = 20 },
-
-  # matchers (dep of tracing-subscriber)
-  { name = "regex-automata", version = "0.1.*", depth = 20 },
-
-  # multiple AWS crates
-  { name = "http-body", version = "0.4.*", depth = 20 },
-
-  # multiple AWS crates
-  { name = "http-body", version = "0.4.*", depth = 20 },
-  { name = "http", version = "0.2.*", depth = 20 },
-
-  # snafu
-  { name = "heck", version = "0.4.*", depth = 20 },
-]
-
-# This section is considered when running `cargo deny check sources`.
-# More documentation about the 'sources' section can be found here:
-# https://embarkstudios.github.io/cargo-deny/checks/sources/cfg.html
-[sources]
-# Lint level for what to happen when a crate from a crate registry that is not
-# in the allow list is encountered
-unknown-registry = "deny"
-# Lint level for what to happen when a crate from a git repository that is not
-# in the allow list is encountered
-unknown-git = "deny"
-# List of URLs for allowed crate registries. Defaults to the crates.io index
-# if not specified. If it is specified but empty, no registries are allowed.
-allow-registry = ["https://github.com/rust-lang/crates.io-index"]
-# List of URLs for allowed Git repositories
-allow-git = []
-
-[sources.allow-org]
-# 1 or more github.com organizations to allow git sources for
-#github = [""]
-# 1 or more gitlab.com organizations to allow git sources for
-#gitlab = [""]
-# 1 or more bitbucket.org organizations to allow git sources for
-#bitbucket = [""]
